--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -41,7 +41,7 @@ mixin header(active, useWhite)
           | Binance waiting list
           span .
         
-        input.here-input(placeholder="Phone number")
+        input.here-input(placeholder="Near username")
         button.here-button.light Submit 
         .header-form-hr or
         a.here-button.pink.light.appstore(href=common.appStore)
