--- a/landing/index.pug
+++ b/landing/index.pug
@@ -34,7 +34,7 @@ html(lang="en")
                 .page-background
                 include section-features/index.pug
                 include section-news/index.pug
-                include section-comparison/index.pug
+                include section-binance/index.pug
                 include section-howwork/index.pug
                 include section-security/index.pug
                 include section-download/index.pug
@@ -43,5 +43,6 @@ html(lang="en")
 
             include footer/index.pug
             include waitlist-modal/index.pug
+            include waitlist-join/index.pug
 
             script(type="module", src="./index.js")
