--- a/landing/section-features/index.pug
+++ b/landing/section-features/index.pug
@@ -15,7 +15,7 @@ section.features
                 h2
                     | #{feature.title}
                     span.dot .
-                ul
+                ul.feature-pagination
                     for item in feature.items
                         li !{item}
             
