--- a/binance-waitlist/section-asks/index.sass
+++ b/binance-waitlist/section-asks/index.sass
@@ -3,7 +3,15 @@
     padding: 0 0 218px 0
     @media (max-width: 1200px)
         padding: 0 20px 218px 20px
-
+.ask-list
+    li
+        margin: 0 0 0 20px
+        list-style: outside
+        font-weight: 600
+        font-size: 16px
+        line-height: 22px
+        color: #6B6661
+        
 .ask-block
     transition: 0.2s background
     background: #EBDEDC
@@ -45,6 +53,12 @@
         font-size: 16px
         line-height: 22px
         color: #6B6661
+        a
+            text-decoration: underline
+            color: #6B6661
+            &:hover
+                text-decoration: none
+
 
     &-body
         padding: 0 24px 32px 24px
