--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -27,6 +27,8 @@ section
 	@media (max-width: 1160px)
 		margin-top: 80px
 		padding: 0 24px
+	@media (max-width: 1000px)
+		padding: 0 16px
 
 	&>h2
 		display: block
