--- a/landing/section-howwork/index.sass
+++ b/landing/section-howwork/index.sass
@@ -26,20 +26,20 @@
 				width: 686px
 				height: 384px
 
-		@media (max-width: 750px)
-			background-color: #F3EBEA
-			&::after
-				content: ""
-				display: block
-				position: absolute
-				right: 5px
-				top: 8px
-				width: 24px
-				height: 24px
-				background-image: url(../assets/icons/hover-show.svg)
-				background-size: auto 24px
-				background-position: 50%
-				background-repeat: no-repeat
+		// @media (max-width: 750px)
+		// 	background-color: #F3EBEA
+		// 	&::after
+		// 		content: ""
+		// 		display: block
+		// 		position: absolute
+		// 		right: 5px
+		// 		top: 8px
+		// 		width: 24px
+		// 		height: 24px
+		// 		background-image: url(../assets/icons/hover-show.svg)
+		// 		background-size: auto 24px
+		// 		background-position: 50%
+		// 		background-repeat: no-repeat
 	&__left
 		display: flex
 		flex-direction: column
