--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -61,7 +61,7 @@ mixin header(active, useWhite)
       a(href=common.partnershipLink).partnership !{common.partnership}
       img.preheader_powered-by-near.preheader-logo(src='/assets/powered-by-near.svg' alt='Powered by Near')
 .header-note
-  p Join our bi-weekly community call on Saturdays! <a href="#">Click here to join</a>
+  p Join our bi-weekly community call on Saturdays! <a href="https://discord.gg/vHetwCjkFe" target="_blank">Click here to join</a>
   span.header-note__close
 .float-qr
   .qrcode
