--- a/landing/section-download/index.pug
+++ b/landing/section-download/index.pug
@@ -12,8 +12,8 @@ section.download
                     img(src='/assets/Socials/apple.svg')
                     | App Store
 
-                button.here-button.pink.waitlist-button
-                    | Android waitlist
+                a.here-button.pink(href="https://play.google.com/store/apps/details?id=com.herewallet&hl=en&gl=US")
+                    | Android
             
         img(src=download.picture)
         .download-banner-qr
