--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -38,7 +38,7 @@ html(lang="en")
 				p Only for the first 1000 activations.
 				.header-status__links.desktop-view
 					a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e",target="_blank").here-button.here-button-orange Learn more
-					.here-button.pink.waitlist-button-join Join waitlist
+					.here-button.pink.waitlist-button Join waitlist
 			.header-status__date.date-block
 				.date-block__top
 					.date-block__column
@@ -62,7 +62,7 @@ html(lang="en")
 						.timer__items.timer__seconds
 			.header-status__links.mobile-view
 				a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e").here-button.here-button-orange Learn more
-				.here-button.pink.waitlist-button-join Join waitlist
+				.here-button.pink.waitlist-button Join waitlist
 		.list-block
 			h2 Users with unlocked feature
 			.list-block__table
@@ -79,6 +79,5 @@ html(lang="en")
 			a(href="#").nonlist-block__link.block-link
 
 		include section-asks/index.pug
-		include ../landing/waitlist-modal/index.pug
-		include ./waitlist-join/index.pug
+		include ../landing/waitlist-join/index.pug
 		script(type="module", src="index.js")
