--- a/binance-waitlist/style.sass
+++ b/binance-waitlist/style.sass
@@ -578,5 +578,5 @@ html, body
 
 
 @import "section-asks"
+@import "waitlist-join"
 @import "../landing/header"
-@import "../landing/waitlist-modal"
