--- a/landing/section-binance/index.pug
+++ b/landing/section-binance/index.pug
@@ -10,7 +10,7 @@ section.binance-features__wrapper
 			.binance-features__item-front
 				.binance-features__item-top
 					.binance-features__item-img
-						img(src="../assets/Graphics/bin-ac-9per.svg", alt="9%")
+						img(src="../assets/Graphics/bin-ac-9per.svg", alt="9.5%").item-img_95per
 					p 2.25%
 				.binance-features__item-bottom
 					p Flexible NEAR staking APY
