--- a/landing/section-binance/index.sass
+++ b/landing/section-binance/index.sass
@@ -196,6 +196,8 @@
 			margin: 18px 0 0 28px
 			transform: scale(0)
 			opacity: 0
+			.item-img_95per
+				width: 172px
 
 		&:nth-child(2)
 			.binance-features__item-img
@@ -234,27 +236,27 @@
 				display: block
 				width: 148px
 				height: 110px
-				animation: popBigImg 0.9s forwards
+				animation: popBigImg 0.8s forwards
 				
 			&:nth-child(2) .binance-features__item-img
-				animation-delay: 0.2s
+				animation-delay: 0.15s
 			&:nth-child(3) .binance-features__item-img
-				animation-delay: 0.35s
+				animation-delay: 0.25s
 			
 			.binance-features__item-und
-				animation: popTexSlide 0.9s forwards
+				animation: popTexSlide 0.8s forwards
 			&:nth-child(2) .binance-features__item-und
-				animation-delay: 0.2s
+				animation-delay: 0.15s
 			&:nth-child(3) .binance-features__item-und
-				animation-delay: 0.35s
+				animation-delay: 0.25s
 
 			.binance-features__item-top p
 				margin: 0
-				animation: lowText 0.9s forwards
+				animation: lowText 0.8s forwards
 			&:nth-child(2) .binance-features__item-top p
-				animation-delay: 0.2s
+				animation-delay: 0.15s
 			&:nth-child(3) .binance-features__item-img
-				animation-delay: 0.35s
+				animation-delay: 0.25s
 				@media (max-width: 1000px)
 					margin: 18px 0 0 0
 
@@ -281,19 +283,19 @@
 		overflow: hidden
 		&.action
 			.binance-features-2__logos
-				animation: logoScale 0.8s forwards
-				animation-delay: 0.70s
+				animation: logoScale 0.7s forwards
+				animation-delay: 0.60s
 			p.binance-features-2__und-logo
-				animation: lowText2_1 0.7s forwards
-				animation-delay: 0.70s
+				animation: lowText2_1 0.6s forwards
+				animation-delay: 0.60s
 			p.binance-features-2__hidden
 				animation: lowText2_2 0.5s forwards
-				animation-delay: 0.72s
+				animation-delay: 0.62s
 			&:nth-child(2) p
-				animation-delay: 0.9s
+				animation-delay: 0.8s
 			.binance-features-2__text
-				animation: logoScale 0.7s forwards
-				animation-delay: 0.9s
+				animation: logoScale 0.6s forwards
+				animation-delay: 0.8s
 				@media (max-width: 1000px)
 					font-size: 28px
 					line-height: 35px
