--- a/binance-waitlist/waitlist-join/index.pug
+++ b/binance-waitlist/waitlist-join/index.pug
@@ -5,12 +5,14 @@
         
         h2 Binance waiting list
         p Leave your near username to get early access to Binance connect
-        input.here-input-nick(placeholder="Near username")
-        button.here-button Submit
+        .form-block
+            input.here-input-nick(placeholder="Near username")
+            .error-valid
+            button.here-button Submit
 
 #success-modal.modal-wrap
     .modal-body
-        button.modal-close 
+        button.modal-close
             img(src="/assets/icons/close.svg")
 
         img(src="/assets/Graphics/success.png", height="148px")
