--- a/landing/waitlist-modal/index.sass
+++ b/landing/waitlist-modal/index.sass
@@ -32,7 +32,7 @@
     left: 0
     right: 0
     bottom: 0
-    z-index: 10005
+    z-index: 30005
     padding: 16px
 
     &.open
@@ -87,6 +87,7 @@
         margin-top: 32px
         box-sizing: border-box
         width: 100%
+        box-shadow: 4px 4px #2c3034
 
     .here-button
         margin-top: 16px
