--- a/landing/index.pug
+++ b/landing/index.pug
@@ -5,11 +5,22 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
+        title HERE Wallet - secure, fun and powerful client for crypto exchanges
+		meta(name="description", content="Self-custodial wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain.")
+		meta(name="og:title", content="HERE Wallet")
+		meta(name="og:description", content="Self-custodial wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain.")
+		meta(name="og:url", content="https://herewallet.app")
+		meta(name="og:image", content="https://storage.herewallet.app/download.jpg")
+		
+        link(href="style.sass", rel="stylesheet")
+		link(href="http://herewallet.app/nft", rel="canonical")
+		
+
         link(rel='shortcut icon' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico' type='image/x-icon')
-        link(rel='apple-touch-icon' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
-        link(rel='apple-touch-icon' sizes='76x76' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
-        link(rel='apple-touch-icon' sizes='152x152' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
-        link(rel='apple-touch-startup-image' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+        link(rel='apple-touch-icon' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_1.ico')
+        link(rel='apple-touch-icon' sizes='76x76' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico')
+        link(rel='apple-touch-icon' sizes='152x152' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico')
+        link(rel='apple-touch-startup-image' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico')
        
         // Google tag (gtag.js)
         script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-J76SQ67RJB')
@@ -22,7 +33,6 @@ html(lang="en")
         link(href="../assets/cabinet-grotesk/index.css", rel="stylesheet")
         link(href="../assets/manrope/index.css", rel="stylesheet")
         link(href="./index.sass", rel="stylesheet")
-        title HERE Wallet
     body 
         include header/index.pug
         +header("/")
