--- a/landing/index.pug
+++ b/landing/index.pug
@@ -6,8 +6,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
         title HERE Wallet - secure, fun and powerful client for crypto exchanges
-		meta(name="description", content="Self-custodial wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain.")
-		meta(name="og:title", content="HERE Wallet")
+		meta(name="description", content="Self-custodial mobile wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain. Support NEAR Protocol.")
+		
+        meta(name="og:title", content="HERE Wallet")
 		meta(name="og:description", content="Self-custodial wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain.")
 		meta(name="og:url", content="https://herewallet.app")
 		meta(name="og:image", content="https://storage.herewallet.app/download.jpg")
