--- a/landing/section-news/index.sass
+++ b/landing/section-news/index.sass
@@ -56,11 +56,11 @@
 
     &-item p
         display: -webkit-box
-        -webkit-line-clamp: 3
+        -webkit-line-clamp: 5
         -webkit-box-orient: vertical
         text-overflow: ellipsis
+        white-space: break-spaces
         width: 100%
-        height: 68px
         overflow: hidden
         font-style: normal
         font-weight: 500
