--- a/landing/footer/index.pug
+++ b/landing/footer/index.pug
@@ -1,6 +1,6 @@
 footer.footer
     img.footer-logo(src='/assets/logo.svg')
-    a.footer-mail(href='maito:#{common.supportEmail}') 
+    a.footer-mail(href=common.mailto) 
         | #{common.supportEmail}
 
     .footer-socials
