--- a/landing/section-binance/index.pug
+++ b/landing/section-binance/index.pug
@@ -1,5 +1,6 @@
 section.binance-features__wrapper
-	h2 Your Binance account
+	.background
+	h2 Your Binance accont
 	.binance-here
 		img(src="../assets/icons/icon-binance-black.svg", alt="Binance").binance-here__binance
 		img(src="../assets/icons/icon-x.svg", alt="Binance").binance-here__x
@@ -10,7 +11,7 @@ section.binance-features__wrapper
 			.binance-features__item-front
 				.binance-features__item-top
 					.binance-features__item-img
-						img(src="../assets/Graphics/bin-ac-9per.svg", alt="9.5%").item-img_95per
+						img(src="../assets/Graphics/bin-ac-9per.png", alt="9.5%").item-img_95per
 					p 2.25%
 				.binance-features__item-bottom
 					p Flexible NEAR staking APY
@@ -22,7 +23,7 @@ section.binance-features__wrapper
 			.binance-features__item-front
 				.binance-features__item-top
 					.binance-features__item-img
-						img(src="../assets/Graphics/bin-ac-3d.svg", alt="3D")
+						img(src="../assets/Graphics/bin-ac-3d.png", alt="3D").item-img_3d
 					p 120 days
 				.binance-features__item-bottom
 					p Locking<br /> period
@@ -34,7 +35,7 @@ section.binance-features__wrapper
 			.binance-features__item-front
 				.binance-features__item-top
 					.binance-features__item-img
-						img(src="../assets/Graphics/bin-ac-8per.svg", alt="8%")
+						img(src="../assets/Graphics/bin-ac-8per.png", alt="8%").item-img_8per
 					p 4-6%
 				.binance-features__item-bottom
 					p Stablecoin<br /> APY
@@ -45,18 +46,18 @@ section.binance-features__wrapper
 		.binance-features-2__item
 			h3 Application Support
 			.binance-features-2__logos
-				img(src="../assets/Graphics/logo/logo-1.png", alt="alt")
+				img(class="wide" src="../assets/Graphics/logo/logo-0.png", alt="alt")
 				img(src="../assets/Graphics/logo/logo-2.png", alt="alt")
-				img(src="../assets/Graphics/logo/logo-3.png", alt="alt")
-				img(src="../assets/Graphics/logo/logo-4.png", alt="alt")
+				img(src="../assets/Graphics/logo/logo-1.png", alt="alt")
+				img(src="../assets/Graphics/logo/logo-10.png", alt="alt")
+				img(src="../assets/Graphics/logo/logo-11.png", alt="alt")
+				img(src="../assets/Graphics/logo/logo-9.png", alt="alt")
 				img(src="../assets/Graphics/logo/logo-5.png", alt="alt")
-				img(src="../assets/Graphics/logo/logo-6.png", alt="alt")
-				img(src="../assets/Graphics/logo/logo-7.png", alt="alt")
 			p.binance-features-2__und-logo DeFi from<br /> Binance whitelist
 			p.binance-features-2__hidden DeFi from Binance whitelist
 		
 		.binance-features-2__item
 			h3 Seed phrase owner
-			.binance-features-2__text Access via seed phrase.<br /> Stored locally
+			.binance-features-2__text Stored locally
 			p.binance-features-2__und-logo Binance team
 			p.binance-features-2__hidden Binance team
