--- a/landing/section-download/index.pug
+++ b/landing/section-download/index.pug
@@ -13,7 +13,8 @@ section.download
                     | App Store
 
                 a.here-button.pink(href="https://play.google.com/store/apps/details?id=com.herewallet&hl=en&gl=US")
-                    | Android
+                    img(src='/assets/Socials/google-play.svg')
+                    | Google play
             
         img(src=download.picture)
         .download-banner-qr
