--- a/landing/section-howwork/index.pug
+++ b/landing/section-howwork/index.pug
@@ -1,5 +1,7 @@
 section.how-work
 	h2 How it works
+		span.dot ?
+	p HERE app use Binance API key to move funds between your crypto wallet and exchange account when your need it
 
 	.how-work__cover
 		.how-work__mobile-img
@@ -11,17 +13,17 @@ section.how-work
 				.how-work__binance
 					img(src="../assets/binance-logo.svg", alt="Binance")
 				.how-work__arrow_big
-					span.how-work__arrow-top Stake onchain
+					span.how-work__arrow-top Stake via Binance
 					span.how-work__arrow-bottom.how-work__arrow-bottom_red 2.5% APY
 			.how-work__bottom
 				.how-work__pink-block Start staking
 				.how-work__arrow
-					span Transfer to non-custodial wallet
+					span Transfer coins to crypto wallet
 				.how-work__logo
 					img(src="../assets/logo-black.svg", alt="Here")
 				.how-work__arrow_big
 					span.how-work__arrow-top Stake onchain
-					span.how-work__arrow-bottom 10% APY
+					span.how-work__arrow-bottom.how-work__arrow-bottom_green 9%+ APY
 		.how-work__right
 			span.logo-wallet.logo-wallet__1
 			span.logo-wallet.logo-wallet__2
