--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -2,7 +2,7 @@ body
 	padding: 0
 	margin: 0
 	background-color: #2c3034
-	font-family: "Manrope", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
+	font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
 	overflow-x: hidden
 
 h1,
@@ -59,7 +59,7 @@ section
 
 .here-button
 	cursor: pointer
-	font-family: 'Manrope'
+	font-family: 'Inter'
 	box-sizing: border-box
 	display: flex
 	flex-direction: row
@@ -104,7 +104,7 @@ section
 		background-color: #FDBF1E
 .here-input, .here-input-nick
 	display: flex
-	font-family: 'Manrope'
+	font-family: 'Inter'
 	flex-direction: column
 	justify-content: center
 	align-items: flex-start
@@ -122,7 +122,7 @@ section
 	border: 1px solid #2C3034
 	border-radius: 16px
 	height: 56px
-	
+
 	&::placeholder
 		color: #6B6661
 .page
