--- a/landing/section-asks/index.sass
+++ b/landing/section-asks/index.sass
@@ -20,22 +20,22 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding: 32px 24px
+        padding: 32px 24px 32px 24px
         gap: 16px
 
     &-header p
         margin: 0
-        font-weight: 600
+        font-weight: 500
         font-size: 20px
         line-height: 27px
         color: #2C3034
 
     &-header img
         transition: 0.35s transform
-        
+
     &-body p
         margin: 0
-        font-weight: 600
+        font-weight: 500
         font-size: 16px
         line-height: 22px
         color: #6B6661
@@ -44,3 +44,10 @@
         padding: 0 24px 32px 24px
         display: none
 
+    ul
+        margin: 0
+        padding-left: 24px
+        font-weight: 600
+        font-size: 16px
+        line-height: 22px
+        color: #6B6661
