--- a/landing/section-binance/index.sass
+++ b/landing/section-binance/index.sass
@@ -8,6 +8,104 @@
 	100%
 		transform: scale(1)
 		opacity: 1
+
+@keyframes popBigImgReverse
+	0%
+		transform: scale(1)
+		opacity: 1
+
+	30%
+		transform: scale(1.1)
+		opacity: 1
+
+	50%
+		transform: scale(0)
+		opacity: 0
+	100%
+		transform: scale(0)
+		opacity: 0
+
+@keyframes logoScaleReverse
+	0%
+		transform: scale(1)
+		opacity: 1
+
+	60%
+		transform: scale(1.05)
+
+	100%
+		transform: scale(0)
+		opacity: 0
+
+@keyframes lowTextReverse
+	0%
+		position: absolute
+		line-height: 27px
+		font-weight: 500
+		color: #6B6661
+		text-decoration-line: line-through
+		font-feature-settings: 'liga' off
+		transform: translate(-40px, 37px) scale(0.5)
+		font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
+
+	100%
+		top: 50%
+		left: 50%
+		font-weight: 900
+		font-size: 40px
+		line-height: 50px
+		font-feature-settings: 'liga' off
+		transform: translate(-50%, -50%) scale(1)
+
+@keyframes lowText2_1Reverse
+	0%
+		transform: translate(-50%, -50%) scale(0)
+
+	100%
+		position: absolute
+		top: 50%
+		left: 50%
+		width: 100%
+		max-width: 320px
+		transform: translate(-50%, -50%)
+		margin: 0
+		font-family: CabinetGrotesk
+		font-weight: 900
+		font-size: 40px
+		line-height: 50px
+		text-align: center
+		font-feature-settings: 'liga' off
+		color: #2C3034
+
+@keyframes lowText2_2Reverse
+	0%
+		font-weight: 500
+		font-size: 20px
+		line-height: 27px
+		text-align: center
+		text-decoration-line: line-through
+		transform: translate(-50%, 76px)
+		opacity: 1
+
+	50%
+		opacity: 0
+
+	100%
+		text-decoration-line: none
+		transform: translate(-50%, -50%) scale(1)
+		font-size: 40px
+		line-height: 50px
+
+@keyframes popTexSlideReverse
+	0%
+		top: 132px
+
+	70%
+		top: 134px
+
+	100%
+		top: 40px
+
 @keyframes logoScale
 	0%
 		transform: scale(0)
@@ -34,6 +132,7 @@
 		text-decoration-line: line-through
 		font-feature-settings: 'liga' off
 		transform: translate(-40px, 37px) scale(0.5)
+		font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
 @keyframes lowText2_1
 	0%
 		transform: translate(-50%, -50%) scale(1)
@@ -48,7 +147,6 @@
 @keyframes lowText2_2
 	0%
 		transform: translate(-50%, -50%) scale(1)
-		font-family: 'Manrope'
 		font-size: 40px
 		line-height: 50px
 	100%
@@ -57,7 +155,6 @@
 		line-height: 27px
 		text-align: center
 		text-decoration-line: line-through
-		font-feature-settings: 'liga' off
 		transform: translate(-50%, 76px)
 		opacity: 1
 @keyframes popTexSlide
@@ -67,7 +164,7 @@
 		top: 134px
 	100%
 		top: 132px
-	
+
 .binance-here
 	display: flex
 	justify-content: center
@@ -126,9 +223,18 @@
 		gap: 20px
 		margin: 0 0 16px 0
 	&__wrapper
+		position: relative
 		h2
 			margin: 0 auto 32px auto
-			
+		.background
+			position: absolute
+			width: 100vw
+			left: calc(-1 * (50vw / 3.2))
+			top: 10%
+			height: 692px
+			background-image: url("/assets/Graphics/pattern.svg")
+			background-repeat: no-repeat
+
 	&__item
 		position: relative
 		width: calc( 33.3333% - 11px )
@@ -137,7 +243,7 @@
 			width: calc( 50% - 10px )
 		@media (max-width: 750px)
 			width: 100%
-		
+
 		&:nth-child(3)
 			@media (max-width: 1000px)
 				width: 100%
@@ -150,7 +256,7 @@
 					margin: 0 18px
 			.binance-features__item-top p
 				@media (max-width: 1000px)
-					margin: 0
+					margin: 0 0 20 0
 			.binance-features__item-bottom
 				@media (max-width: 1000px)
 					width: auto
@@ -159,8 +265,6 @@
 				@media (max-width: 750px)
 					text-align: left
 
-
-			
 		&-front
 			display: flex
 			align-items: center
@@ -172,13 +276,17 @@
 			background: #EBDEDC
 			border: 1px solid #D2C5C3
 			border-radius: 24px
+			@media (max-width: 650px)
+				height: 158px
 		&-top
 			position: relative
 			width: 217px
 			height: 100%
 			@media (max-width: 1000px)
 				justify-content: center
+
 			p
+				color: #2C3034
 				position: absolute
 				top: 50%
 				left: 50%
@@ -190,24 +298,35 @@
 				line-height: 50px
 				font-feature-settings: 'liga' off
 				white-space: nowrap
+				@media (max-width: 650px)
+					top: 38%
 
 		&-img
 			display: none
-			margin: 18px 0 0 28px
+			margin: 16px 0 0 25px
 			transform: scale(0)
 			opacity: 0
+			img
+				object-fit: contain
+			.item-img_3d
+				width: 112px
+			.item-img_8per
+				width: 145px
 			.item-img_95per
-				width: 172px
+				width: 145px
+				@media (max-width: 650px)
+					width: 180px !important
+					height: 90px !important
 
 		&:nth-child(2)
 			.binance-features__item-img
-				margin: 28px 0 0 40px
+				margin: 25px 0 0 36px
 
 		&-bottom
 			width: calc( 100% - 217px )
 			p
 				margin: 0
-				font-weight: 600
+				font-weight: 700
 				font-size: 18px
 				line-height: 25px
 				font-feature-settings: 'liga' off
@@ -222,6 +341,8 @@
 			background: #2C3034
 			border: 1px solid #2C3034
 			border-radius: 0px 0px 24px 24px
+			@media (max-width: 650px)
+				padding: 30px 0 0 0
 			p
 				font-weight: 600
 				font-size: 20px
@@ -229,20 +350,40 @@
 				text-align: center
 				font-feature-settings: 'liga' off
 				color: #EBDEDC
+
+		&.reverse
+			.binance-features__item-front
+				transition: all 0.15s linear
+			.binance-features__item-img
+				display: block
+				opacity: 1
+				animation: popBigImgReverse 0.8s forwards
+			.binance-features__item-logo
+				animation: logoScaleReverse 0.8s forwards
+			.binance-features__item-top p
+				animation: lowTextReverse 0.8s forwards
+			.binance-features__item-und
+				animation: popTexSlideReverse 0.8s forwards
+
 		&.action
 			.binance-features__item-front
 				transition: all 0.15s linear
 			.binance-features__item-img
 				display: block
-				width: 148px
+				width: 145px
 				height: 110px
 				animation: popBigImg 0.8s forwards
-				
+				img
+					image-rendering: -webkit-optimize-contrast
+					@media (max-width: 650px)
+						width: 130px
+						height: 80px
+
 			&:nth-child(2) .binance-features__item-img
 				animation-delay: 0.15s
 			&:nth-child(3) .binance-features__item-img
 				animation-delay: 0.25s
-			
+
 			.binance-features__item-und
 				animation: popTexSlide 0.8s forwards
 			&:nth-child(2) .binance-features__item-und
@@ -259,10 +400,6 @@
 				animation-delay: 0.25s
 				@media (max-width: 1000px)
 					margin: 18px 0 0 0
-
-
-
-
 
 .binance-features-2
 	display: flex
@@ -281,6 +418,17 @@
 		border-radius: 24px
 		text-align: center
 		overflow: hidden
+		&.reverse
+			.binance-features-2__logos
+				animation: logoScaleReverse 0.7s forwards
+			p.binance-features-2__und-logo
+				animation: lowText2_1Reverse 0.6s forwards
+			p.binance-features-2__hidden
+				animation: lowText2_2Reverse 0.5s forwards
+			&:nth-child(2) p
+			.binance-features-2__text
+				opacity: 0
+				animation: logoScaleReverse 0.6s forwards
 		&.action
 			.binance-features-2__logos
 				animation: logoScale 0.7s forwards
@@ -305,7 +453,7 @@
 	&__logos
 		display: flex
 		gap: 28px
-		margin: 0 0 0 -16px
+		margin: 0 0 0 -40px
 		padding: 40px 0
 		opacity: 0
 		@media (max-width: 1000px)
@@ -313,7 +461,9 @@
 		img
 			width: 58px
 			height: 58px
-		
+		.wide
+			width: 106px
+
 	&__text
 		opacity: 0
 		padding: 16px 0 16px 0
@@ -326,14 +476,14 @@
 		font-feature-settings: 'liga' off
 		color: #2C3034
 	h3
+		font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
 		position: absolute
 		top: 28px
 		width: 100%
-		font-weight: 600
+		font-weight: 700
 		font-size: 18px
 		text-align: center
 		line-height: 25px
-		font-feature-settings: 'liga' off
 		color: #2C3034
 	&__und-logo
 		position: absolute
@@ -359,7 +509,6 @@
 		max-width: 100%
 		transform: translate(-50%, -50%)
 		margin: 0
-		font-family: 'Manrope'
 		font-size: 40px
 		line-height: 50px
 		text-align: center
