--- a/landing/section-download/index.sass
+++ b/landing/section-download/index.sass
@@ -30,10 +30,12 @@
 .download-banner-links
     display: flex
     gap: 16px
-    padding: 0 8px
     align-items: center
     justify-content: center
     flex-wrap: wrap
+    a
+        font-weight: 600
+        font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
 
 .download-banner-text
     display: flex
@@ -41,13 +43,14 @@
     width: fit-content
     box-sizing: border-box
     justify-content: center
+    align-items: start
     height: 100%
     padding: 24px
     @media (max-width: 800px)
         padding: 0
         
     & p
-        font-weight: 800
+        font-weight: 700
         font-size: 28px
         line-height: 38px
         color: #6B6661
