--- a/landing/header/index.sass
+++ b/landing/header/index.sass
@@ -85,7 +85,7 @@
             height: 100vh
     &-link
         width: fit-content
-        margin: 0 36px
+        margin: 0 26px
         font-weight: 600
         font-size: 16px
         line-height: 22px
@@ -96,6 +96,10 @@
         transition: 0.2s opacity
         &:hover
             opacity: 0.8
+        @media (max-width: 1190px)
+            margin: 0 16px
+        @media (max-width: 1000px)
+            margin: 0 12px
         @media (max-width: 900px)
             margin: 0
 
