--- a/blog/style.sass
+++ b/blog/style.sass
@@ -124,7 +124,7 @@ section
     .link-logo
         width: 95px
         height: 21px
-        background-image: url(./../assets/logo-black.svg)
+        background-image: url(../assets/logo-black.svg)
         background-size: 100%
         background-repeat: no-repeat
         img
